update element ui css file location & change title.

--- a/static/taskrouter_dashboard.html
+++ b/static/taskrouter_dashboard.html
@@ -6,10 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Twilio Real-Time TaskRouter Dashboard">
         <meta name="author" content="Ameer Badri, Twilio">
-        <title>Twilio TaskRouter Dashboard</title>
+        <title>VizyContact Client Dashboard</title>
         <!--  <link href="style.css" rel="stylesheet"> -->
         <!-- import CSS -->
-        <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css">
+      <!--  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css"> -->
+        <link rel="stylesheet" href="https://unpkg.com/element-ui@2.0.3/lib/theme-chalk/index.css">
+        
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css"/>
         <link rel="stylesheet" href="/static/taskrouter_dashboard.css"/>
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
