canceled to abandoned

--- a/static/taskrouter_dashboard.html
+++ b/static/taskrouter_dashboard.html
@@ -89,7 +89,7 @@
                         {{currentTaskStatus['canceled']}}
                       </div>
                       <div class="label">
-                        Canceled
+                        Abandoned
                       </div>
                     </div>
                 </div>
