avg wait title change

--- a/static/taskrouter_dashboard.html
+++ b/static/taskrouter_dashboard.html
@@ -42,7 +42,7 @@
                         {{avgTaskAcceptanceTime}}
                       </div>
                       <div class="label">
-                        Acceptance Time (sec)
+                        Average Wait Time (sec)
                       </div>
                     </div>
                 </div>
